--- a/styles.css
+++ b/styles.css
@@ -520,10 +520,57 @@ font-size: 50px; */
 }
 .w-100 {
   width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.FootterButtonContainer {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 25px;
+  /* justify-content: space-between; - rozsuwa elementy  */
+}
+.FootterButtons {
+  display: flex;
 }
 .SmallFooterButtons {
-  border-radius: 20px;
+  border-radius: 10px;
+  width: 110px;
+  height: 40px;
+  margin-left: 7px;
+  margin-right: 7px;
+  font-size: 17px;
+  text-transform: uppercase;
+}
+.RightFooterButtons {
   display: flex;
-  width: 200px;
-  height: 250px;
+  margin-right: 50px;
+  font-size: 25px;
+  text-transform: uppercase;
+}
+.ForumAbautSpace {
+  margin-right: 5px;
+  margin-left: 5px;
+}
+.IconsContainer {
+  display: flex;
+  justify-content: right;
+  padding-right: 40px;
+}
+.SocialIco {
+  width: 50px;
+  height: 50px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.w3Legends {
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.like-btn {
+  background: red;
+  width: 120px;
+  display: flex;
 }
